// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h2>
    1
     
    expenses
     tottaling 
    $2.00
  </h2>
</div>
`;

exports[`should correctly render ExpensesSummary with multy expenses 1`] = `
<div>
  <h2>
    5
     
    expenses
     tottaling 
    $12.00
  </h2>
</div>
`;
